uses direct commands

--- a/shippable.yml
+++ b/shippable.yml
@@ -50,7 +50,12 @@ jobs:
               env:
                 - aws_region: "us-east-1"
           script:
-            - *terraform-init
+            - pushd $(shipctl get_resource_state "aws_rds_tf_repo")
+            - export AWS_ACCESS_KEY_ID=$(shipctl get_integration_resource_field aws_rds_tf_creds "accessKey")
+            - export AWS_SECRET_ACCESS_KEY=$(shipctl get_integration_resource_field aws_rds_tf_creds "secretKey")
+            - shipctl copy_file_from_resource_state aws_rds_postgres_tf_state terraform.tfstate .
+            - shipctl replace terraform.tfvars
+            - terraform init
             - terraform apply -auto-approve -var-file=terraform.tfvars
       - OUT: aws_rds_postgres_tf_info
         overwrite: true
