adds always section

--- a/shippable.yml
+++ b/shippable.yml
@@ -58,6 +58,10 @@ jobs:
     on_success:
       script:
         - echo "on_success"
+    always:
+      script:
+        - shipctl copy_file_to_resource_state terraform.tfstate aws_rds_postgres_tf_state
+        - popd
     # on_success:
     #   script:
     #     - echo "TODO: output state info"
